# LLVMSQLite

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  Makefile.linux-gcc  README.md  ittnotify.h  main.mk  shell.c
Examples/: jit_llvm_with_functions.ll  loaded_module.ll  vdbe_12639004319395808131.ll  vdbe_15677352774080203083.ll  vdbe_2237225863155605692.ll  vdbe_4138610883422468122.ll  vdbe_4205013591597254914.ll  vdbe_4205013591805286785.ll  vdbe_6723003182544374830.ll  vdbe_7316227605535850443.ll  vdbe_7972292825733259020.ll
kowalski_util/: .gitignore  apply_opt.sh  build_mlir.sh  calls.py  common.py  common_async.py  compare.py  compress.py  lltypes  lltypes.py  lltypesmlir.py  multirunner.py  runner.py  stack.py  stack_save.py  utils.py
kowalski_util/benchmarking/: .gitignore  common.py  generator.py  generator_micro.py  generator_ssb.py  generator_ssbm.py  generator_tpch.py  micro.sql  micro_dbgen.py  microdb_schema.sql  multirunner.py  runner.py  runner_selectivity.py  static_data.py  static_typing_inference.py
kowalski_util/benchmarking/micro/: 1.sql  10.sql  11.sql  12.sql  13.sql  16.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  aggregate.py
kowalski_util/benchmarking/ssb/: 12.sql  33.sql  41.sql  42.sql  43.sql
kowalski_util/benchmarking/tpch/: 16.sql  17.sql  2.sql  22.sql  4.sql  6.sql
kowalski_util/tpc-h/: .gitignore  1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  18.sql  19.sql  20.sql  21.sql  22.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  common.py  generator.py  multirunner.py  run.sh  runner.py  static_data.py
llvmsqlite_util/: compare.py  compress.py  convert.py  llcomment  llcomment.py  lltypes.py  lltypesmlir.py  opcodes.py
llvmsqlite_util/benchmarking/: common.py  generator_micro.py  generator_ssbm.py  generator_tpch.py  runner_selectivity.py
llvmsqlite_util/benchmarking/micro/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  17.sql  2.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  aggregate.py
llvmsqlite_util/benchmarking/ssb/: 11.sql  13.sql  21.sql  22.sql  23.sql  31.sql  32.sql  34.sql  42.sql
llvmsqlite_util/benchmarking/tpch/: 10.sql  8.sql  9.sql  9.sql.opt
src/: alter.c  analyze.c  attach.c  auth.c  backup.c  btmutex.c  btree.c  build.c  callback.c  ctime.c  date.c  dbpage.c  dbstat.c  default_query.cpp  default_query_data.cpp  delete.c  expr.c  fault.c  fkey.c  func.c  function_definitions.cpp  function_definitions.h  hash.c  insert.c  jit_compilation.bak.cpp  jit_compilation.cpp  jit_utils.cpp  jit_utils.h  loadext.c  main.c  main_function.cpp  malloc.c  mem0.c  mem1.c  mem2.c  mem3.c  mem5.c  memdb.c  memjournal.c  mutex.c  (+102 more)
src/legacy/: function_definitions.cpp  function_definitions.h  main_function.cpp  thomas.cpp  type_definitions.cpp  type_definitions.h  write_opcodes.cpp
src/mlir/: .gitignore  CMakeLists.txt
src/mlir/include/Standalone/: AllIncludes.h  CMakeLists.txt  ConstantManager.h  DebugUtils.h  DefaultImplementation.h  ErrorCodes.h  StandaloneDialect.h  StandaloneDialect.td  StandaloneOps.h  StandaloneOps.td  StandalonePassManager.h  StandalonePasses.h  StandalonePrerequisites.h  TypeDefinitions.h  Utils.h  VdbeContext.h
src/mlir/include/Standalone/Lowering/: ApplyNumericAffinity.h  AssertOperator.h  GetVarint32Operator.h  MemSetNull.h  MyBuilder.h  NumericType.h  OutToPrerelease.h  Printer.h
src/mlir/lib/Standalone/: CMakeLists.txt  DefaultImplementation.cpp  StandaloneDialect.cpp  StandaloneOps.cpp  StandalonePassManager.cpp  StandalonePasses.cpp  StandalonePrerequisites.cpp  TypeCache.cpp  TypeDefinitions.cpp
src/mlir/lib/Standalone/Lowering/: AffinityLowering.cpp  AggFinalLowering.cpp  AggStepLowering.cpp  ArithmeticLowering.cpp  AssertOperator.cpp  BlobLowering.cpp  CastLowering.cpp  CloseLowering.cpp  CollSeqLowering.cpp  ColumnLowering.cpp  CompareJumpLowering.cpp  CompareLowering.cpp  CopyLowering.cpp  DecrJumpZeroLowering.cpp  DeferredSeekLowering.cpp  DeleteLowering.cpp  DropTableLowering.cpp  EndCoroutineLowering.cpp  FunctionLowering.cpp  GosubLowering.cpp  GotoLowering.cpp  HaltLowering.cpp  IdxCompareLowering.cpp  IdxInsertLowering.cpp  IfLowering.cpp  IfNotLowering.cpp  IfNotZeroLowering.cpp  IfNullRowLowering.cpp  IfPosLowering.cpp  InitCoroutineLowering.cpp  InitLowering.cpp  InsertLowering.cpp  IntegerLowering.cpp  IsNullLowering.cpp  JumpLowering.cpp  LastLowering.cpp  MakeRecordLowering.cpp  MoveLowering.cpp  MyBuilder.cpp  NewRowidLowering.cpp  (+38 more)
src/mlir/lib/Standalone/Lowering/Operators/: ApplyNumericAffinity.cpp  AssertOperator.cpp  ConstantManager.cpp  GetVarint32.cpp  MemSetNull.cpp  MyBuilder.cpp  OutToPrerelease.cpp  Printer.cpp
src/mlir/sqlite_bridge/: DynamicLibrary.cpp  ModuleOptimisation.cpp  ModuleWriter.cpp  SQLiteBridge.h  VdbeRunner.h
src/mlir/standalone-opt/: CMakeLists.txt  standalone-opt.cpp
src/mlir/thomas/: BridgeUtils.cpp  BridgeUtils.h  CMakeLists.txt  DynamicLibrary.cpp  ModuleOptimisation.cpp  ModuleWriter.cpp  SQLiteBridge.cpp  SQLiteBridge.h  VdbeHash.cpp  VdbeHash.h  VdbeRunner.h  runJit.cpp  sqlite_bridge.cpp  sqlite_bridge.h  writeFunction.cpp  writefunction.old.cpp
